changes by me